# nordfox_raskroy

./: .gitignore  CHANGELOG.md  README.md  build.bat  build_exe.bat  install_offline.bat  pack_exe_zip.bat  pyproject.toml  requirements.txt  run.bat  setup_offline.bat
.github/workflows/: pytest.yml
docs/: DEVELOPMENT_PLAN.md  MATERIALS_TABLE.md  PLAN.md
scripts/: generate_scrap_stock_example.py  generate_spec_10x5.py  generate_spec_20_modules_block.py  generate_spec_20x5.py  generate_spec_angles_0_180_step10.py  install_pyside6.bat
src/nordfox_raskroy/: __init__.py  __main__.py  album_plan_service.py  app.py  app_tk.py  bar_advisor_service.py  bar_scenarios.py  excel_io.py  export_results.py  layout_plan_service.py  logging_utils.py  materials_library.py  models.py  module_colors.py  module_names.py  optimizer.py  pdf_fonts.py  profile_codes.py  profile_dimensions.py  profile_names.py  qt_app.py  result_sort.py  scrap_stock_io.py  spec_profile_filters.py  table_demand_import.py
test/: raskroy_result.xlsx  scrap_stock_example.xlsx  spec_10x5_modules.xlsx  spec_20_modules_block.xlsx  spec_20x5_modules.xlsx  spec_angles_0_180_step10.xlsx  test_bar_scenarios.py  test_excel_io.py  test_materials_library.py  test_module_colors_export.py  test_optimizer.py  test_profile_codes.py  test_profile_dimensions.py  test_refactor_services.py  test_result_sort.py  test_scrap_stock_io.py  test_spec_20_pipeline.py  test_table_demand_import.py  test_version.py  Блок спецификации.xlsx
